tests/invalid/len_wrong_arg_count/main.py
x: int = len("hello", "world")
